<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SugarcaneDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/other"
            android:layout_width="271dp"
            android:layout_height="51dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/sugarcane_details"
            android:textColor="#fff"
            android:textCursorDrawable="@drawable/forget"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="68dp"
        android:layout_height="34dp"
        android:text="DATE"
        android:textColor="#234785"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/date"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:background="@drawable/forget"
        android:text="Select Date"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:background="@drawable/border"
        android:contentDescription="@string/allai_running_details"
        app:layout_constraintBottom_toBottomOf="@+id/kottaiName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/kottaiName"
        app:layout_constraintTop_toTopOf="@+id/kottaiName"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/kottaiName"
        android:layout_width="123dp"
        android:layout_height="27dp"
        android:text="@string/kottai_name"
        android:textColor="#234785"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TableRow
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:background="#55B9D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/index3"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/s_no"
            android:textColor="#234785"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/index"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Vechicle No"
            android:textColor="#234785"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/index4"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Total Ton"
            android:textColor="#234785"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/index7"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Vettal"
            android:textColor="#234785"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/index6"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Name of Person"
            android:textColor="#234785"
            android:textSize="15sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="345dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/s_no"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/vechileid"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/Tone"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="62dp"
            android:background="@drawable/border"
            android:layout_height="match_parent"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="63dp"
            android:layout_height="53dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </TableRow>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:rotationX="16"
        android:text="SAVE"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />


</androidx.constraintlayout.widget.ConstraintLayout>